# libvmod-redis

./: .gitignore  .travis.yml  COPYING  Dockerfile  LICENSE  Makefile.am  README.rst  Vagrantfile  autogen.sh  configure.ac  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: main.yml
debian/: changelog  control  copyright  dirs
redhat/: vmod-redis.spec
src/: Makefile.am  cluster.c  cluster.h  config.h  core.c  core.h  crc16.c  crc16.h  sentinel.c  sentinel.h  sha1.c  sha1.h  vmod_redis.c  vmod_redis.vcc
src/tests/: clustered.ASK-reply-messages.vtc  clustered.MOVED-reply-messages.vtc  clustered.basics-using-private-pool.vtc  clustered.basics-using-shared-pool.vtc  clustered.template.vtc  clustered01.vtc  clustered02.vtc  clustered03.vtc  clustered04.vtc  clustered05.vtc  runner.sh  standalone.6000000.TLS.vtc.disabled  standalone.6000000.sentinels.vtc  standalone.6000000.sentinels.vtc.disabled  standalone.VCL-temperature-and-discard.vtc  standalone.auto-role.vtc  standalone.basics-using-private-pool.vtc  standalone.basics-with-multiple-servers-and-private-pool.vtc  standalone.basics-with-multiple-servers-and-shared-pool.vtc  standalone.blocked-workers.vtc  standalone.command-execution-timeout.vtc  standalone.easy-command-timeout.vtc  standalone.easy-command.vtc  standalone.get_array.vtc  standalone.password-protected-instances.vtc  standalone.prometheus-stats.vtc  standalone.proxied-methods.vtc  standalone.sentinels.vtc  standalone.sentinels.vtc.disabled  standalone.subnets-using-private-pool.vtc  standalone.subnets-using-shared-pool.vtc  standalone.template.vtc  standalone01.vtc  standalone02.vtc  standalone03.vtc  standalone04.vtc  standalone05.vtc  standalone06.vtc  standalone07.vtc  standalone08.vtc  (+5 more)
src/tests/assets/: hashslot-keys.txt  tls-ca-certificate.crt  tls-ca-certificate.key  tls-certificate.crt  tls-certificate.key
